--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
-  "homepage": "https://github.com/cb-tennakoon/stellar-support-site.git",
+  "homepage": "https://cb-tennakoon/github.io/stellar-support-site/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
